# sudokuGameQt

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp  resources.qrc  sudokuGameQt.cpp  sudokuGameQt.h  sudokuGameQt.qrc  sudokuGameQt.sln  sudokuGameQt.ui  sudokuGameQt.vcxproj  sudokuGameQt.vcxproj.filters  sudokuLogic.cpp  sudokuLogic.h
styles/: app.qss
